--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule ".\\Fountain\\vendor\\GLFW"]
 	path = .\\Fountain\\vendor\\GLFW
 	url = https://github.com/KirkXu/glfw
+[submodule ".\\Fountain\\vendor\\imgui"]
+	path = .\\Fountain\\vendor\\imgui
+	url = https://github.com/KirkXu/imgui
