--- a/Fountain/Fountain.vcxproj.filters
+++ b/Fountain/Fountain.vcxproj.filters
@@ -7,8 +7,14 @@
     <Filter Include="Fountain\Events">
       <UniqueIdentifier>{8D46544B-F9D1-C10F-02E3-44046EED1D10}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Fountain\ImGui">
+      <UniqueIdentifier>{B3DEB9BC-9FAC-ADC2-8840-1EE974AD8927}</UniqueIdentifier>
+    </Filter>
     <Filter Include="Platform">
       <UniqueIdentifier>{2AC788B4-1694-E3BF-3FAD-D1672BD9184E}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Platform\OpenGL">
+      <UniqueIdentifier>{1E7D2C1D-8A08-9AE1-9319-1DD6FF23F6E1}</UniqueIdentifier>
     </Filter>
     <Filter Include="Platform\Windows">
       <UniqueIdentifier>{64FBD71A-50F4-F66C-7926-DCF1657ED678}</UniqueIdentifier>
@@ -37,6 +43,9 @@
     <ClInclude Include="src\Fountain\Events\MouseEvent.h">
       <Filter>Fountain\Events</Filter>
     </ClInclude>
+    <ClInclude Include="src\Fountain\ImGui\ImGuiLayer.h">
+      <Filter>Fountain\ImGui</Filter>
+    </ClInclude>
     <ClInclude Include="src\Fountain\Layer.h">
       <Filter>Fountain</Filter>
     </ClInclude>
@@ -49,6 +58,9 @@
     <ClInclude Include="src\Fountain\Window.h">
       <Filter>Fountain</Filter>
     </ClInclude>
+    <ClInclude Include="src\Platform\OpenGL\imgui_impl_opengl3.h">
+      <Filter>Platform\OpenGL</Filter>
+    </ClInclude>
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h">
       <Filter>Platform\Windows</Filter>
     </ClInclude>
@@ -58,6 +70,9 @@
     <ClCompile Include="src\Fountain\Application.cpp">
       <Filter>Fountain</Filter>
     </ClCompile>
+    <ClCompile Include="src\Fountain\ImGui\ImGuiLayer.cpp">
+      <Filter>Fountain\ImGui</Filter>
+    </ClCompile>
     <ClCompile Include="src\Fountain\Layer.cpp">
       <Filter>Fountain</Filter>
     </ClCompile>
@@ -66,6 +81,9 @@
     </ClCompile>
     <ClCompile Include="src\Fountain\Log.cpp">
       <Filter>Fountain</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Platform\OpenGL\imgui_impl_opengl3.cpp">
+      <Filter>Platform\OpenGL</Filter>
     </ClCompile>
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp">
       <Filter>Platform\Windows</Filter>
