--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -151,11 +151,13 @@
     <ClInclude Include="src\Fountain\Events\KeyEvent.h" />
     <ClInclude Include="src\Fountain\Events\MouseEvent.h" />
     <ClInclude Include="src\Fountain\ImGui\ImGuiLayer.h" />
+    <ClInclude Include="src\Fountain\Input.h" />
     <ClInclude Include="src\Fountain\Layer.h" />
     <ClInclude Include="src\Fountain\LayerStack.h" />
     <ClInclude Include="src\Fountain\Log.h" />
     <ClInclude Include="src\Fountain\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\imgui_impl_opengl3.h" />
+    <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\ftpch.h" />
   </ItemGroup>
@@ -166,6 +168,7 @@
     <ClCompile Include="src\Fountain\LayerStack.cpp" />
     <ClCompile Include="src\Fountain\Log.cpp" />
     <ClCompile Include="src\Platform\OpenGL\imgui_impl_opengl3.cpp" />
+    <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\ftpch.cpp">
       <PrecompiledHeader>Create</PrecompiledHeader>
