--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -15,9 +15,9 @@ Collapsed=0
 DockId=0x00000005,0
 
 [Window][Dear ImGui Demo]
-ViewportPos=1502,241
+ViewportPos=1574,166
 ViewportId=0xE927CF2F
-Size=274,701
+Size=274,682
 Collapsed=0
 
 [Window][Example: Console]
@@ -27,6 +27,8 @@ Collapsed=0
 DockId=0x00000002,0
 
 [Window][DockSpace Demo]
+ViewportPos=568,128
+ViewportId=0x4647B76E
 Size=1280,720
 Collapsed=0
 
@@ -36,7 +38,7 @@ Size=93,48
 Collapsed=0
 
 [Docking][Data]
-DockSpace     ID=0x3BC79352 Pos=242,284 Size=1280,701 Split=X
+DockSpace     ID=0x3BC79352 Pos=568,166 Size=1280,682 Split=X
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=252,701 Selected=0x46B5E99C
   DockNode    ID=0x00000003 Parent=0x3BC79352 SizeRef=1026,701 Split=Y
     DockNode  ID=0x00000004 Parent=0x00000003 SizeRef=647,463 CentralNode=1
