--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -152,9 +152,11 @@
     <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h" />
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
     <ClInclude Include="src\Fountain\Renderer\Shader.h" />
+    <ClInclude Include="src\Fountain\Renderer\VertexArray.h" />
     <ClInclude Include="src\Fountain\Window.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLBuffer.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
     <ClInclude Include="src\Platform\Windows\WindowsInput.h" />
     <ClInclude Include="src\Platform\Windows\WindowsWindow.h" />
     <ClInclude Include="src\ftpch.h" />
@@ -582,8 +584,10 @@
     <ClCompile Include="src\Fountain\Renderer\Buffer.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Shader.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLContext.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsInput.cpp" />
     <ClCompile Include="src\Platform\Windows\WindowsWindow.cpp" />
     <ClCompile Include="src\ftpch.cpp">
