--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -150,7 +150,10 @@
     <ClInclude Include="src\Fountain\MouseButtonCodes.h" />
     <ClInclude Include="src\Fountain\Renderer\Buffer.h" />
     <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
+    <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\Shader.h" />
     <ClInclude Include="src\Fountain\Renderer\VertexArray.h" />
     <ClInclude Include="src\Fountain\Window.h" />
@@ -582,7 +585,10 @@
     <ClCompile Include="src\Fountain\LayerStack.cpp" />
     <ClCompile Include="src\Fountain\Log.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Shader.cpp" />
     <ClCompile Include="src\Fountain\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLBuffer.cpp" />
