--- a/Fountain/Fountain.vcxproj.filters
+++ b/Fountain/Fountain.vcxproj.filters
@@ -1346,6 +1346,9 @@
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
     <ClInclude Include="src\Fountain\Renderer\VertexArray.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLVertexArray.h" />
+    <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
+    <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Fountain\Application.cpp">
@@ -1382,5 +1385,8 @@
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
     <ClCompile Include="src\Fountain\Renderer\VertexArray.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLVertexArray.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
   </ItemGroup>
 </Project>
