Added orthographic camera.

--- a/Fountain/Fountain.vcxproj
+++ b/Fountain/Fountain.vcxproj
@@ -150,6 +150,7 @@
     <ClInclude Include="src\Fountain\MouseButtonCodes.h" />
     <ClInclude Include="src\Fountain\Renderer\Buffer.h" />
     <ClInclude Include="src\Fountain\Renderer\GraphicsContext.h" />
+    <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Fountain\Renderer\Renderer.h" />
@@ -585,6 +586,7 @@
     <ClCompile Include="src\Fountain\LayerStack.cpp" />
     <ClCompile Include="src\Fountain\Log.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Buffer.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Fountain\Renderer\Renderer.cpp" />
