--- a/Fountain/Fountain.vcxproj.filters
+++ b/Fountain/Fountain.vcxproj.filters
@@ -1349,6 +1349,7 @@
     <ClInclude Include="src\Fountain\Renderer\RendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\RenderCommand.h" />
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
+    <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Fountain\Application.cpp">
@@ -1388,5 +1389,6 @@
     <ClCompile Include="src\Fountain\Renderer\RendererAPI.cpp" />
     <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
+    <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp" />
   </ItemGroup>
 </Project>
