Moved OpenGL shader implementation to OpenGLShader class + added more uniform functions.

--- a/Fountain/Fountain.vcxproj.filters
+++ b/Fountain/Fountain.vcxproj.filters
@@ -1351,6 +1351,7 @@
     <ClInclude Include="src\Platform\OpenGL\OpenGLRendererAPI.h" />
     <ClInclude Include="src\Fountain\Renderer\OrthographicCamera.h" />
     <ClInclude Include="src\Fountain\Core\Timestep.h" />
+    <ClInclude Include="src\Platform\OpenGL\OpenGLShader.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Fountain\Application.cpp">
@@ -1391,5 +1392,6 @@
     <ClCompile Include="src\Fountain\Renderer\RenderCommand.cpp" />
     <ClCompile Include="src\Platform\OpenGL\OpenGLRendererAPI.cpp" />
     <ClCompile Include="src\Fountain\Renderer\OrthographicCamera.cpp" />
+    <ClCompile Include="src\Platform\OpenGL\OpenGLShader.cpp" />
   </ItemGroup>
 </Project>
