--- a/Sandbox/imgui.ini
+++ b/Sandbox/imgui.ini
@@ -37,6 +37,11 @@ Pos=60,60
 Size=93,48
 Collapsed=0
 
+[Window][Settings]
+Pos=161,141
+Size=398,125
+Collapsed=0
+
 [Docking][Data]
 DockSpace     ID=0x3BC79352 Pos=568,166 Size=1280,682 Split=X
   DockNode    ID=0x00000002 Parent=0x3BC79352 SizeRef=252,701 Selected=0x46B5E99C
